--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -1,10 +1,6 @@
-.footer {
-    width: 100%;
-    height: 1.5vw;
+.me-auto{
     position: fixed;
     display: flex;
-    bottom: 0;
-    background-color: gainsboro;
     align-items: center;
     justify-content: space-between;
 }
